# aws-mcp-server

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: test.yml
src/aws_mcp/: __init__.py  client.py  config.py  exceptions.py  server.py
