[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aws-mcp-server"
version = "0.1.0"
description = "MCP server for AWS API integration"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "asklokesh", email = "asklokesh@example.com" }
]
dependencies = [
    "boto3>=1.26.0",
    "botocore>=1.29.0",
    "httpx>=0.24.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0.0",
    "aioboto3>=11.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0",
    "moto>=4.0",
    "ruff>=0.1.0"
]

[project.scripts]
aws-mcp = "aws_mcp.server:main"